# backend/server/server.go
@@ -45,7 +45,7 @@ func Serve(addr string) {
     authAPI.POST("users/me/condition/cycle",handler.HandleCycleConditionCreate()) // サイクル条件登録API
     authAPI.POST("users/me/condition/environment",handler.HandleEnvironmentConditionCreate()) // 環境条件登録API
     authAPI.GET("users/me/condition",handler.HandleUserConditionGet()) // 本日の状態取得API
-   
+    authAPI.GET("users/me/condition/today/cycle",handler.HandleUserTodayCycleConditionGet) // 本日のサイクル条件取得API
     weather.Pressure()
 
     /* ===== サーバの起動 ===== */
